[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-implement-a-tool-integration-contract-ve"
version = "0.1.0"
description = "Implement a Tool Integration Contract Version Router"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools]
py-modules = ["main"]
